// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`feniciaSubmissionTemplate > should generate body with all fields > fenicia-body-full 1`] = `
"<div style="font-family: Arial, sans-serif; color: #333;">
  <h2>Documentos de Importação</h2>
  <p>Prezados,</p>
  <p>Segue em anexo a documentação referente ao processo de importação abaixo descrito para registro e providências junto à Fenícia.</p>

  <table style="border-collapse: collapse; width: 100%; margin: 20px 0;">
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Processo</td>
      <td style="padding: 8px; border: 1px solid #ddd;">IMP-2026-010</td>
    </tr>
    <tr>
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Marca</td>
      <td style="padding: 8px; border: 1px solid #ddd;">puket</td>
    </tr>
    
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Exportador</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Zhejiang Textiles Co.</td>
    </tr>
    
    <tr>
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Importador</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Grupo Soma S.A.</td>
    </tr>
    
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Valor FOB</td>
      <td style="padding: 8px; border: 1px solid #ddd;">USD 45000.00</td>
    </tr>
    
    <tr>
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Incoterm</td>
      <td style="padding: 8px; border: 1px solid #ddd;">FOB</td>
    </tr>
    
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Total de Volumes</td>
      <td style="padding: 8px; border: 1px solid #ddd;">120</td>
    </tr>
    
    <tr>
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Porto de Embarque</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Shanghai</td>
    </tr>
    
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Porto de Descarga</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Santos</td>
    </tr>
    
    <tr>
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">ETD</td>
      <td style="padding: 8px; border: 1px solid #ddd;">2026-04-01</td>
    </tr>
    
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">ETA</td>
      <td style="padding: 8px; border: 1px solid #ddd;">2026-05-15</td>
    </tr>
  </table>

  <p>Solicitamos a conferência dos documentos e início do processo de desembaraço.</p>
  <p>Qualquer dúvida, estamos à disposição.</p>

  <p>Atenciosamente,<br/>Equipe de Importação</p>
</div>"
`;

exports[`feniciaSubmissionTemplate > should generate body with minimal fields > fenicia-body-minimal 1`] = `
"<div style="font-family: Arial, sans-serif; color: #333;">
  <h2>Documentos de Importação</h2>
  <p>Prezados,</p>
  <p>Segue em anexo a documentação referente ao processo de importação abaixo descrito para registro e providências junto à Fenícia.</p>

  <table style="border-collapse: collapse; width: 100%; margin: 20px 0;">
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Processo</td>
      <td style="padding: 8px; border: 1px solid #ddd;">IMP-2026-011</td>
    </tr>
    <tr>
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Marca</td>
      <td style="padding: 8px; border: 1px solid #ddd;">imaginarium</td>
    </tr>
    
    
    
    
    
    
    
    
    
  </table>

  <p>Solicitamos a conferência dos documentos e início do processo de desembaraço.</p>
  <p>Qualquer dúvida, estamos à disposição.</p>

  <p>Atenciosamente,<br/>Equipe de Importação</p>
</div>"
`;

exports[`feniciaSubmissionTemplate > should generate body with partial fields > fenicia-body-partial 1`] = `
"<div style="font-family: Arial, sans-serif; color: #333;">
  <h2>Documentos de Importação</h2>
  <p>Prezados,</p>
  <p>Segue em anexo a documentação referente ao processo de importação abaixo descrito para registro e providências junto à Fenícia.</p>

  <table style="border-collapse: collapse; width: 100%; margin: 20px 0;">
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Processo</td>
      <td style="padding: 8px; border: 1px solid #ddd;">IMP-2026-012</td>
    </tr>
    <tr>
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Marca</td>
      <td style="padding: 8px; border: 1px solid #ddd;">puket</td>
    </tr>
    
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Exportador</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Guangzhou Trading Ltd.</td>
    </tr>
    
    
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Valor FOB</td>
      <td style="padding: 8px; border: 1px solid #ddd;">USD 28000.00</td>
    </tr>
    
    
    
    <tr>
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">Porto de Embarque</td>
      <td style="padding: 8px; border: 1px solid #ddd;">Ningbo</td>
    </tr>
    
    
    
    <tr style="background-color: #f5f5f5;">
      <td style="padding: 8px; border: 1px solid #ddd; font-weight: bold;">ETA</td>
      <td style="padding: 8px; border: 1px solid #ddd;">2026-06-20</td>
    </tr>
  </table>

  <p>Solicitamos a conferência dos documentos e início do processo de desembaraço.</p>
  <p>Qualquer dúvida, estamos à disposição.</p>

  <p>Atenciosamente,<br/>Equipe de Importação</p>
</div>"
`;

exports[`feniciaSubmissionTemplate > should generate correct subject > fenicia-subject 1`] = `"Documentos de Importação - IMP-2026-010 - puket"`;
